Style grid overflow fix

--- a/docs/static/css/main.css
+++ b/docs/static/css/main.css
@@ -57,22 +57,26 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #000;
+  background-color: black;
   color: var(--color-font);
   position:relative;
+  height: 100vh;
+  width: 100vw;
 }
 
 main {
   background-color: var(--color-bg-body);
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   display: grid; 
   grid-auto-columns: 1fr; 
   grid-template-columns: 0.1fr .8fr .1fr; 
   grid-template-rows: 1fr; 
   gap: 0 2%; 
   grid-template-areas: 
-    ". center ."
+    ". center .";
+  min-height:0;
+  overflow: hidden;
 }
 
 .center {
@@ -80,18 +84,22 @@ main {
   display: grid; 
   grid-auto-columns: 1fr; 
   grid-template-columns: 1fr; 
-  grid-template-rows: 1fr 9fr; 
+  grid-template-rows: minmax(50px, 1fr) minmax(250px, 9fr);
   gap: 0 2%; 
   grid-template-areas: 
     "header"
     "content";
   background-color: var(--color-bg-center);
+  min-width: 0;
+  min-height: 0;
   box-shadow: 0 1px 2px 0 var(--color-shadow-center-1), 
               0 1px 3px 0 var(--color-shadow-center-2);
+         
 }
 
 .header {
   grid-area: header;
+  /* overflow:hidden; */
   display:flex;
   flex-direction: row;
   padding: 0 0 0 2%;
@@ -99,10 +107,21 @@ main {
   border-bottom: 1px solid var(--color-border-header);
 }
 
-.content {
+.content-wrapper {
   grid-area: content;
-  padding: 3%;
+  height:auto;
+  overflow-y: auto;
 }
+
+.content {
+  
+  flex: 1;
+  min-height: 0;
+  overflow-y: auto;
+  padding: 3%;
+  
+}
+
 
 .page-title {
   height:100%;
